--- a/register.html
+++ b/register.html
@@ -10,9 +10,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta property="og:title" content="Free Ram Murti Registration">
     <meta property="og:description" content="Submit Your Application Now!">
-    <meta property="og:image" content="https://c.h33.live/ramno.png">
+    <meta property="og:image" content="https://free.sanatan.top/logo.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.luluhypermarket.in/">
+    <meta property="og:url" content="https://free.sanatan.top/">
     <title>Free Ram Murti Registration</title>
 
     <style>
