--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta property="og:title" content="Free Ram Murti Registration">
     <meta property="og:description" content="Submit Your Application Now!">
-    <meta property="og:image" content="https://free.sanatan.top/logo.jpg">
+    <meta property="og:image" content="https://sanatan.top/free22.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://free.sanatan.top/">
     <title>Free Ram Murti Registration</title>
